[refs #10] fix mobile disappearance changed the height of the pads so that they display properly on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ main {
 
 .pad {
  width: 30vmin;
- height: 100%;
+ height: 30vh;
 }
 
 .controls--game {
